fix: mobile chef of the week font size and spacing

--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -736,7 +736,7 @@ h6 {
   .chef-info {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: initial;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
   }
@@ -759,7 +759,8 @@ h6 {
     text-align: center;
     grid-area: 1 / 1 / 2 / 2;
     grid-area: 2 / 1 / 3 / 2;
-    margin: auto;
+    font-size: 1.2rem;
+    margin: 2rem auto;
     width: 22rem;
   }
 }
@@ -776,12 +777,11 @@ h6 {
 
 @media (max-width: 768px) {
   .chef-of-the-week .container {
-    margin: 0 1rem;
-    margin-top: 4rem;
+    margin: auto 1rem 0;
   }
 
   .chef-of-the-week .container h2 {
-    font-size: large;
+    font-size: 1.2rem;
   }
 }
 
